# fastfibonacci-rs

./: Cargo.toml  README.md  coverage.sh
benches/: my_benchmark.rs
src/: bare64_old.rs  bare_metal.rs  bare_metal_64.rs  bare_metal_64single.rs  bare_metal_generic_single.rs  chunker.rs  fast.rs  fast_fib_generic.rs  faster.rs  fastutils.rs  fib_utils.rs  fibonacci.rs  fibonacci_fast.rs  fibonacci_old.rs  lib.rs  main.rs  nobitvec.rs  old_stuff.rs  partial.rs  u64Fibdecoder.rs  u64_fibdecoder.rs  u64reader.rs  utils.rs
src/bit_decode/: fast.rs  fibonacci.rs  mod.rs
src/byte_decode/: bare_metal_16single_faster.rs  bare_metal_3264_stream.rs  bare_metal_64.rs  bare_metal_64single.rs  bare_metal_generic_single.rs  byte_manipulation.rs  bytestream_transform.rs  chunker.rs  faster.rs  mod.rs  partial.rs  u64_fibdecoder.rs  u64_fibdecoder_refactor.rs
tests/: correctness.rs
