[package]
name = "fastfibonacci"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
license = " GPL-3.0-or-later"
description = "Fast Fibonacci encoding/decoding"
homepage = "https://github.com/redst4r/fastfibonacci-rs"
repository = "https://github.com/redst4r/fastfibonacci-rs"
keywords = ["integer-compression", "encoding", "fibonacci"]
categories = ["Compression", "Algorithms"]
readme = "README.md"
include = ["/src", "README.md"]


[dependencies]
bitvec="1"
itertools="0.12"
bit-vec="0.6"  # TODO: remove this old depenency
rand = "0.8"
num = "0.4"
once_cell = "1.18.0"

[dev-dependencies]
fibonacci_codec="0.2" # TODO: remove this old depenency
criterion = "0.5"
pretty_assertions = "1"
rand_distr = "0.4.3"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"  # only here to make the crate publishable; otherwise cargo complains about missing bench file
