[package]
name = "fastfibonacci"
version = "1.1.0"
edition = "2021"
rust-version = "1.74"
license = " GPL-3.0-or-later"
description = "Fast Fibonacci encoding/decoding"
homepage = "https://github.com/redst4r/fastfibonacci-rs"
repository = "https://github.com/redst4r/fastfibonacci-rs"
keywords = ["integer-compression", "encoding", "fibonacci"]
categories = ["Compression", "Algorithms"]
readme = "README.md"
include = ["/src", "README.md"]


[dependencies]
bitvec="1"
itertools="0.13"
num = "0.4"
once_cell = "1.18.0"
funty = "2"
rand = "0.8"
byteorder = "1.5"

[dev-dependencies]
fibonacci_codec="0.2" # TODO: remove this old depenency
bit-vec="0.6"  # TODO: remove this old depenency
criterion = "0.5"
pretty_assertions = "1"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"  # only here to make the crate publishable; otherwise cargo complains about missing bench file

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

# [lints.clippy]
pedantic = "warn"